# force-of-will-formalism

./: README.md  pyproject.toml
docs/: coherence-functional.md  formalism.md  glossary.md  hyperstratum-bridge.md
examples/: agent-assessment.md  self-audit-template.md
force_of_will/: __init__.py  model.py
tests/: test_model.py
